T.o.M.E 2.3.6

- Don't generate impassable glass walls.






T.o.M.E 2.3.5 aka "Into the unknown" changes

Interface changes:
- The X11 and Xaw interfaces now save the dungeon and player when the
  window is closed.
- Fixed cpu churning bug that occurs when using certain window managers and
  ToME is maximized.

Gameplay changes:
- Player speed now set correctly when Demon Hide corruption is enabled.
- ToME now correctly sets various Balrog flags when player in Balrog form.
- ToME now correctly sets the teleport flags when teleport corruption is
  enabled.
- ToME now uses the qrand7.map file when generating princess quests.
- Bigs changes for generate.c to get it to produce the princess and thrain
  rooms. Also code clean up of room geranation code.

Object changes:
- Slings of Buckland can now be generated.
- Wiki Bug 510. Added the WIELD_CAST flag to all artifact instruments to
  fix problems when casting spells.

Misc changes:
- Fixed small typo in the commands help file.
- Added help for the Mathom House.
- Fixed various compile time warnings in various files.
- Added makefile support for main-gtk2.c in makefile.std
- Values found in documentation for spectral race modifiers now match values
  found in p_info.txt.
- Wiki Bug 837. Removed references to old inscriptions handling code in
  documentation.
- Wiki Bug 564. Do not use the word 'restrict' as a variable name anymore.
  It conflicts with keywords used by the Sun Studio Compiler.
- Wiki Bug 517. Fixed incorrect descriptoin of artifacts in help files.
- Changed description of Disarm spell to more accurately reflect what it
  does.
- ToME now correctly compiles main-gtk2.c on 64-bit machines.

Bug fixes:
- Wiki Bugs 841, 405, 360. Changes to get ToME to correctly build 64-bit
  executables.
- Applied killerbunnies patch to identify objects on grid before squelching.
- Applied killer bunnies patch to keep the fate "you are fated to find