@@ -37,13 +37,14 @@ bool quest_evil_gen_hook(char *fmt)
 	/* Place some random balrogs */
 	for (i = 6; i > 0; )
 	{
-		int flags;
+		int m_idx, flags;
 		y = rand_int(21) + 3;
 		x = rand_int(31) + 3;
 		flags = f_info[cave[y][x].feat].flags1;
 		if (!(flags & FF1_PERMANENT) && (flags & FF1_FLOOR))
 		{
-			place_monster_one(y, x, 996, 0, FALSE, MSTATUS_ENEMY);
+			m_idx = place_monster_one(y, x, 996, 0, FALSE, MSTATUS_ENEMY);
+			if (m_idx) m_list[m_idx].mflag |= MFLAG_QUEST;
 			--i;
 		}
 	}
