@@ -37,13 +37,14 @@ bool quest_wolves_gen_hook(char *fmt)
 	/* Place some random wolves */
 	for (i = damroll(4, 4); i > 0; )
 	{
-		int flags;
+		int m_idx, flags;
 		y = rand_int(21) + 3;
 		x = rand_int(31) + 3;
 		flags = f_info[cave[y][x].feat].flags1;
 		if (!(flags & FF1_PERMANENT) && (flags & FF1_FLOOR))
 		{
-			place_monster_one(y, x, 196, 0, magik(50), MSTATUS_ENEMY);
+			m_idx = place_monster_one(y, x, 196, 0, magik(50), MSTATUS_ENEMY);
+			if (m_idx) m_list[m_idx].mflag |= MFLAG_QUEST;
 			--i;
 		}
 	}
@@ -51,13 +52,14 @@ bool quest_wolves_gen_hook(char *fmt)
 	/* Place some random wargs */
 	for (i = damroll(4, 4); i > 0; )
 	{
-		int flags;
+		int m_idx, flags;
 		y = rand_int(21) + 3;
 		x = rand_int(31) + 3;
 		flags = f_info[cave[y][x].feat].flags1;
 		if (!(flags & FF1_PERMANENT) && (flags & FF1_FLOOR))
 		{
-			place_monster_one(y, x, 257, 0, magik(50), MSTATUS_ENEMY);
+			m_idx = place_monster_one(y, x, 257, 0, magik(50), MSTATUS_ENEMY);
+			if (m_idx) m_list[m_idx].mflag |= MFLAG_QUEST;
 			--i;
 		}
 	}
