@@ -1,6 +1,7 @@
 T.o.M.E 2.3.6
 
 - Don't generate impassable glass walls.
+- Mark *all* quest monsters properly.
 
 
 
